# project-euler-rust

./: Cargo.toml  README.md
.github/workflows/: build.yaml  format.yaml
src/: base_ten.rs  combinatorics.rs  factors.rs  generators.rs  lib.rs  predicates.rs  strings.rs  text.rs
src/base_ten/: as_string.rs  digits.rs  truncated.rs
src/combinatorics/: count_permutations.rs  permutations.rs  traverse_2d_vec.rs
src/factors/: all_factors.rs  prime_factors.rs
src/generators/: fibonacci.rs  hailstone.rs  primes.rs  triangular.rs
src/predicates/: is_prime.rs  practical.rs  primality.rs  pythagorean.rs
src/strings/: palindromes.rs  string_to_integer_sequence.rs  string_to_vec_of_vec_of_int.rs
src/text/: number_as_text.rs
tests/: pe-1.rs  pe-10.rs  pe-11.rs  pe-12.rs  pe-123.rs  pe-13.rs  pe-14.rs  pe-15.rs  pe-16.rs  pe-17.rs  pe-2.rs  pe-263.rs  pe-3.rs  pe-4.rs  pe-5.rs  pe-6.rs  pe-7.rs  pe-8.rs  pe-9.rs  pe-97.rs
