[package]
name = "project-euler-rust"
version = "0.1.0"
authors = ["Andreas Christianson <achristianson@pessimistic-it.com>"]
edition = "2018"

[[bin]]
name = "pe-1"
[[bin]]
name = "pe-2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

